matchplay handling refactoring