@@ -1,16 +1,20 @@
 package com.jftse.emulator.server.core.matchplay.game;
 
+import com.jftse.emulator.server.core.constants.BonusIconHighlightValues;
 import com.jftse.emulator.server.core.constants.ServeType;
 import com.jftse.emulator.server.core.life.progression.ExpGoldBonus;
 import com.jftse.emulator.server.core.life.progression.ExpGoldBonusImpl;
 import com.jftse.emulator.server.core.life.progression.SimpleExpGoldBonus;
-import com.jftse.emulator.server.core.life.progression.bonuses.WonGameBonus;
+import com.jftse.emulator.server.core.life.progression.bonuses.*;
 import com.jftse.emulator.server.core.life.room.RoomPlayer;
 import com.jftse.emulator.server.core.life.room.ServeInfo;
 import com.jftse.emulator.server.core.manager.ServiceManager;
 import com.jftse.emulator.server.core.matchplay.MatchplayGame;
+import com.jftse.emulator.server.core.matchplay.MatchplayHandleable;
 import com.jftse.emulator.server.core.matchplay.PlayerReward;
 
+import com.jftse.emulator.server.core.matchplay.handler.MatchplayBasicModeHandler;
+import com.jftse.entities.database.model.messenger.Friend;
 import com.jftse.server.core.item.EItemCategory;
 import lombok.Getter;
 import lombok.Setter;
@@ -18,124 +22,130 @@ import lombok.Setter;
 import java.awt.*;
 import java.util.List;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
 
 @Getter
 @Setter
 public class MatchplayBasicGame extends MatchplayGame {
-    private HashMap<Integer, Integer> individualPointsMadeFromPlayers;
-    private ArrayList<Point> playerLocationsOnMap;
-    private boolean[] pointBackVotes;
-    private int pointsRedTeam;
-    private int pointsBlueTeam;
-    private int setsRedTeam;
-    private int setsBlueTeam;
-    private RoomPlayer servePlayer;
-    private RoomPlayer receiverPlayer;
+    private Map<Integer, Integer> individualPointsMadeFromPlayers;
+    private List<Point> playerLocationsOnMap;
+    private Map<Integer, Boolean> pointBackVotes;
+    private AtomicInteger pointsRedTeam;
+    private AtomicInteger pointsBlueTeam;
+    private AtomicInteger setsRedTeam;
+    private AtomicInteger setsBlueTeam;
+    private AtomicReference<RoomPlayer> servePlayer;
+    private AtomicReference<RoomPlayer> receiverPlayer;
 
-    private HashMap<Integer, Integer> previousIndividualPointsMadeFromPlayers;
-    private int previousPointsRedTeam;
-    private int previousPointsBlueTeam;
-    private int previousSetsRedTeam;
-    private int previousSetsBlueTeam;
-    private short previousServePlayerPosition;
-    private short previousReceiverPlayerPosition;
-    private boolean setDowngraded = false;
-    private boolean pointBackValid = false;
+    private Map<Integer, Integer> previousIndividualPointsMadeFromPlayers;
+    private AtomicInteger previousPointsRedTeam;
+    private AtomicInteger previousPointsBlueTeam;
+    private AtomicInteger previousSetsRedTeam;
+    private AtomicInteger previousSetsBlueTeam;
+    private AtomicInteger previousServePlayerPosition;
+    private AtomicInteger previousReceiverPlayerPosition;
+    private AtomicBoolean setDowngraded = new AtomicBoolean(false);
+    private AtomicBoolean pointBackValid = new AtomicBoolean(false);
 
     public MatchplayBasicGame(byte players) {
+        super();
+
         Calendar cal = Calendar.getInstance(TimeZone.getTimeZone("UTC"));
-        this.setStartTime(cal.getTime());
-        this.playerLocationsOnMap = new ArrayList<>(Arrays.asList(
+        this.startTime = new AtomicReference<>(cal.getTime());
+
+        this.playerLocationsOnMap = List.of(
                 new Point(20, -125),
                 new Point(-20, 125),
                 new Point(-20, -75),
-                new Point(20, 75)
-        ));
+                new Point(20, 75));
 
-        this.pointsRedTeam = 0;
-        this.pointsBlueTeam = 0;
-        this.setsRedTeam = 0;
-        this.setsBlueTeam = 0;
-        this.setFinished(false);
-        this.pointBackVotes = new boolean[players];
-        this.individualPointsMadeFromPlayers = new HashMap<>(players);
+        this.pointsRedTeam = new AtomicInteger(0);
+        this.pointsBlueTeam = new AtomicInteger(0);
+        this.setsRedTeam = new AtomicInteger(0);
+        this.setsBlueTeam = new AtomicInteger(0);
+        this.finished = new AtomicBoolean(false);
+        this.pointBackVotes = new ConcurrentHashMap<>(players);
+        this.individualPointsMadeFromPlayers = new ConcurrentHashMap<>(players);
         for (int i = 0; i < players; i++) {
             this.individualPointsMadeFromPlayers.put(i, 0);
         }
     }
 
-    public synchronized void setPoints(byte pointsRedTeam, byte pointsBlueTeam) {
-        if (this.isFinished())
+    public void setPoints(byte pointsRedTeam, byte pointsBlueTeam) {
+        if (this.finished.get())
             return;
 
-        this.previousPointsRedTeam = this.pointsRedTeam;
-        this.previousPointsBlueTeam = this.pointsBlueTeam;
-        this.previousSetsRedTeam = this.setsRedTeam;
-        this.previousSetsBlueTeam = this.setsBlueTeam;
-        this.previousIndividualPointsMadeFromPlayers = new HashMap<>(this.individualPointsMadeFromPlayers);
-        if (this.servePlayer != null)
-            this.previousServePlayerPosition = this.servePlayer.getPosition();
-        if (this.receiverPlayer != null)
-            this.previousReceiverPlayerPosition = this.receiverPlayer.getPosition();
-        this.pointBackValid = true;
+        this.previousPointsRedTeam.set(this.pointsRedTeam.get());
+        this.previousPointsBlueTeam.set(this.pointsBlueTeam.get());
+        this.previousSetsRedTeam.set(this.setsRedTeam.get());
+        this.previousSetsBlueTeam.set(this.setsBlueTeam.get());
+        this.previousIndividualPointsMadeFromPlayers.putAll(this.individualPointsMadeFromPlayers);
+        if (this.servePlayer.get() != null)
+            this.previousServePlayerPosition.set(this.servePlayer.get().getPosition());
+        if (this.receiverPlayer.get() != null)
+            this.previousReceiverPlayerPosition.set(this.receiverPlayer.get().getPosition());
+        this.pointBackValid.set(true);
 
-        this.pointsRedTeam = pointsRedTeam;
-        this.pointsBlueTeam = pointsBlueTeam;
+        this.pointsRedTeam.set(pointsRedTeam);
+        this.pointsBlueTeam.set(pointsBlueTeam);
 
         if (pointsRedTeam == 4 && pointsBlueTeam < 3) {
-            this.setsRedTeam += 1;
+            this.setsRedTeam.getAndIncrement();
             resetPoints();
-        }
-        else if (pointsRedTeam > 4 && (pointsRedTeam - pointsBlueTeam) == 2) {
-            this.setsRedTeam += 1;
+        } else if (pointsRedTeam > 4 && (pointsRedTeam - pointsBlueTeam) == 2) {
+            this.setsRedTeam.getAndIncrement();
             resetPoints();
-        }
-        else if (pointsBlueTeam == 4 && pointsRedTeam < 3) {
-            this.setsBlueTeam += 1;
+        } else if (pointsBlueTeam == 4 && pointsRedTeam < 3) {
+            this.setsBlueTeam.getAndIncrement();
             resetPoints();
-        }
-        else if (pointsBlueTeam > 4 && (pointsBlueTeam - pointsRedTeam) == 2) {
-            this.setsBlueTeam += 1;
+        } else if (pointsBlueTeam > 4 && (pointsBlueTeam - pointsRedTeam) == 2) {
+            this.setsBlueTeam.getAndIncrement();
             resetPoints();
         }
 
-        if (this.setsRedTeam == 2 || this.setsBlueTeam == 2) {
-            this.setFinished(true);
+        if (this.setsRedTeam.get() == 2 || this.setsBlueTeam.get() == 2) {
+            this.finished.set(true);
 
             Calendar cal = Calendar.getInstance(TimeZone.getTimeZone("UTC"));
-            this.setEndTime(cal.getTime());
+            this.endTime = new AtomicReference<>(cal.getTime());
         }
         resetPointBackVotes();
     }
 
     public synchronized void setPointBackVote(int playerPosition) {
-        this.pointBackVotes[playerPosition] = true;
+        this.pointBackVotes.put(playerPosition, true);
     }
 
     public boolean isPointBackAvailable() {
-        for (boolean pointBackVote : this.pointBackVotes) {
-            if (!pointBackVote)
+        for (Map.Entry<Integer, Boolean> entry : this.pointBackVotes.entrySet()) {
+            if (!entry.getValue())
                 return false;
         }
-        return this.pointBackValid;
+        return this.pointBackValid.get();
     }
 
     public synchronized void pointBack() {
-        this.pointsRedTeam = this.previousPointsRedTeam;
-        this.pointsBlueTeam = this.previousPointsBlueTeam;
+        this.pointsRedTeam.set(this.previousPointsRedTeam.get());
+        this.pointsBlueTeam.set(this.previousPointsBlueTeam.get());
         //for example, if downgraded to 40 - 0 from 1 - 0 sets
-        setDowngraded = previousSetsBlueTeam != this.setsBlueTeam || this.previousSetsRedTeam != this.setsRedTeam;
-        this.setsRedTeam = this.previousSetsRedTeam;
-        this.setsBlueTeam = this.previousSetsBlueTeam;
-        this.individualPointsMadeFromPlayers = new HashMap<>(this.previousIndividualPointsMadeFromPlayers);
+        this.setDowngraded.set(this.previousSetsRedTeam.get() != this.setsRedTeam.get() || this.previousSetsBlueTeam.get() != this.setsBlueTeam.get());
+        this.setsRedTeam.set(this.previousSetsRedTeam.get());
+        this.setsBlueTeam.set(this.previousSetsBlueTeam.get());
+        this.individualPointsMadeFromPlayers.putAll(this.previousIndividualPointsMadeFromPlayers);
 
         resetPointBackVotes();
-        this.pointBackValid = false;
+        this.pointBackValid.set(false);
     }
 
     private void resetPointBackVotes() {
-        Arrays.fill(this.pointBackVotes, false);
+        for (Map.Entry<Integer, Boolean> entry : this.pointBackVotes.entrySet()) {
+            entry.setValue(false);
+        }
     }
 
     public synchronized void increasePerformancePointForPlayer(int playerPosition) {
@@ -151,13 +161,14 @@ public class MatchplayBasicGame extends MatchplayGame {
         return playerPositions;
     }
 
+    @Override
     public List<PlayerReward> getPlayerRewards() {
         int secondsPlayed = (int) Math.ceil((double) this.getTimeNeeded() / 1000);
         List<PlayerReward> playerRewards = new ArrayList<>();
         for (int playerPosition : this.getPlayerPositionsOrderedByPerformance()) {
             boolean wonGame = false;
             boolean isPlayerInRedTeam = this.isRedTeam(playerPosition);
-            if (isPlayerInRedTeam && this.getSetsRedTeam() == 2 || !isPlayerInRedTeam && this.getSetsBlueTeam() == 2) {
+            if (isPlayerInRedTeam && this.getSetsRedTeam().get() == 2 || !isPlayerInRedTeam && this.getSetsBlueTeam().get() == 2) {
                 wonGame = true;
             }
 
@@ -184,10 +195,9 @@ public class MatchplayBasicGame extends MatchplayGame {
 
             int rewardExp = expGoldBonus.calculateExp();
             int rewardGold = expGoldBonus.calculateGold();
-            PlayerReward playerReward = new PlayerReward();
-            playerReward.setPlayerPosition(playerPosition);
-            playerReward.setRewardExp(rewardExp);
-            playerReward.setRewardGold(rewardGold);
+            PlayerReward playerReward = new PlayerReward(playerPosition);
+            playerReward.setExp(rewardExp);
+            playerReward.setGold(rewardGold);
 
             List<Integer> materialsForReward = ServiceManager.getInstance().getItemMaterialService().findAllItemIndexes();
             List<Integer> materialsProductIndex = ServiceManager.getInstance().getProductService().findAllProductIndexesByCategoryAndItemIndexList(EItemCategory.MATERIAL.getName(), materialsForReward);
@@ -196,12 +206,12 @@ public class MatchplayBasicGame extends MatchplayGame {
             Random rnd = new Random();
             int drawnMaterial = rnd.nextInt(materialsProductIndex.size() - 1 + 1) + 1;
 
-            playerReward.setRewardProductIndex(materialsProductIndex.get(drawnMaterial - 1));
+            playerReward.setProductIndex(materialsProductIndex.get(drawnMaterial - 1));
 
             final int min = 1;
             final int max = !wonGame ? 2 : 3;
             final int amount = rnd.nextInt(max - min + 1) + min;
-            playerReward.setProductRewardAmount(amount);
+            playerReward.setProductAmount(amount);
 
             playerRewards.add(playerReward);
         }
@@ -209,24 +219,100 @@ public class MatchplayBasicGame extends MatchplayGame {
         return playerRewards;
     }
 
+    @Override
+    public void addBonusesToRewards(ConcurrentLinkedDeque<RoomPlayer> roomPlayers, List<PlayerReward> playerRewards) {
+        final boolean isSingles = roomPlayers.stream().filter(rp -> rp.getPosition() < 4).count() == 2;
+        for (RoomPlayer rp : roomPlayers) {
+            boolean wonGame = false;
+
+            final boolean isActivePlayer = rp.getPosition() < 4;
+            final boolean isCurrentPlayerInRedTeam = this.isRedTeam(rp.getPosition());
+
+            if (isActivePlayer) {
+                PlayerReward playerReward = playerRewards.stream()
+                        .filter(pr -> pr.getPlayerPosition() == rp.getPosition())
+                        .findFirst()
+                        .orElse(new PlayerReward(rp.getPosition()));
+
+                if (isCurrentPlayerInRedTeam && this.getSetsRedTeam().get() == 2 || !isCurrentPlayerInRedTeam && this.getSetsBlueTeam().get() == 2) {
+                    wonGame = true;
+                }
+
+                if (!isSingles)
+                    playerReward.setActiveBonuses(playerReward.getActiveBonuses() | BonusIconHighlightValues.TeamBonus);
+
+                ExpGoldBonus expGoldBonusSimple = new ExpGoldBonusImpl(playerReward.getExp(), playerReward.getGold());
+                int rewardExpSimple = expGoldBonusSimple.calculateExp();
+                int rewardGoldSimple = expGoldBonusSimple.calculateGold();
+
+                // add house bonus
+                ExpGoldBonus expGoldBonus = new BasicHouseBonus(expGoldBonusSimple, rp.getPlayer().getAccount().getId());
+                int rewardExp = expGoldBonus.calculateExp();
+                int rewardGold = expGoldBonus.calculateGold();
+
+                if (rewardExpSimple != rewardExp || rewardGoldSimple != rewardGold) {
+                    playerReward.setActiveBonuses(playerReward.getActiveBonuses() | BonusIconHighlightValues.HouseBonus);
+                }
+
+                // add exp, gold or wiseman ring bonus if equipped
+                if (!rp.isRingOfWisemanEquipped()) {
+                    if (rp.isRingOfExpEquipped()) {
+                        expGoldBonus = new RingOfExpBonus(expGoldBonus);
+                        rewardExp = expGoldBonus.calculateExp();
+                        rewardGold = expGoldBonus.calculateGold();
+
+                        playerReward.setActiveBonuses(playerReward.getActiveBonuses() | (BonusIconHighlightValues.ExpBonus << 16));
+                    }
+                    if (rp.isRingOfGoldEquipped()) {
+                        expGoldBonus = new RingOfGoldBonus(expGoldBonus);
+                        rewardExp = expGoldBonus.calculateExp();
+                        rewardGold = expGoldBonus.calculateGold();
+
+                        playerReward.setActiveBonuses(playerReward.getActiveBonuses() | (BonusIconHighlightValues.GoldBonus << 16));
+                    }
+                } else {
+                    expGoldBonus = new RingOfWisemanBonus(expGoldBonus);
+                    rewardExp = expGoldBonus.calculateExp();
+                    rewardGold = expGoldBonus.calculateGold();
+
+                    playerReward.setActiveBonuses(playerReward.getActiveBonuses() | (BonusIconHighlightValues.WisemanBonus << 16));
+                }
+
+                playerReward.setExp(rewardExp);
+                playerReward.setGold(rewardGold);
+
+                // add couple bonus
+                Friend friend = rp.getCouple();
+                if (friend != null) {
+                    final boolean hasCoupleInTeam = roomPlayers.stream()
+                            .filter(roomPlayer -> roomPlayer.getPosition() != rp.getPosition())
+                            .anyMatch(roomPlayer -> {
+                                final boolean isInRedTeam = this.isRedTeam(roomPlayer.getPosition());
+                                final boolean isInBlueTeam = this.isBlueTeam(roomPlayer.getPosition());
+                                if (isInRedTeam == isCurrentPlayerInRedTeam || isInBlueTeam == !isCurrentPlayerInRedTeam) {
+                                    Friend f = roomPlayer.getCouple();
+                                    return f != null && f.getFriend().getId().equals(friend.getPlayer().getId()) && f.getEFriendshipState() == friend.getEFriendshipState();
+                                }
+                                return false;
+                            });
+                    if (hasCoupleInTeam) {
+                        int newCouplePoints = 0;
+                        if (wonGame)
+                            newCouplePoints = 5;
+                        else
+                            newCouplePoints = 2;
+
+                        playerReward.setCouplePoints(newCouplePoints);
+                        playerReward.setActiveBonuses(playerReward.getActiveBonuses() | (BonusIconHighlightValues.CoupleBonus << 8));
+                    }
+                }
+            }
+        }
+    }
+
     private void resetPoints() {
-        this.pointsRedTeam = 0;
-        this.pointsBlueTeam = 0;
-    }
-
-    @Override
-    public long getTimeNeeded() {
-        return getEndTime().getTime() - getStartTime().getTime();
-    }
-
-    @Override
-    public boolean isRedTeam(int playerPos) {
-        return playerPos == 0 || playerPos == 2;
-    }
-
-    @Override
-    public boolean isBlueTeam(int playerPos) {
-        return playerPos == 1 || playerPos == 3;
+        this.pointsRedTeam.set(0);
+        this.pointsBlueTeam.set(0);
     }
 
     public Point invertPointX(Point point) {
@@ -265,8 +351,8 @@ public class MatchplayBasicGame extends MatchplayGame {
     }
 
     public void setPlayerLocationsForDoubles(List<ServeInfo> serveInfo) {
-        long outerFieldPosY = 125;
-        long innerFieldPosY = 75;
+        final long outerFieldPosY = 125;
+        final long innerFieldPosY = 75;
 
         ServeInfo server = serveInfo.stream().filter(x -> x.getServeType() == ServeType.ServeBall).findFirst().orElse(null);
         if (server == null) return;
@@ -314,5 +400,10 @@ public class MatchplayBasicGame extends MatchplayGame {
 
     private boolean isEven(int number) {
         return number % 2 == 0;
+    }
+
+    @Override
+    protected MatchplayHandleable createHandler() {
+        return new MatchplayBasicModeHandler(this);
     }
 }
